--- a/fuchion/src/app/aboutus/aboutus.component.html
+++ b/fuchion/src/app/aboutus/aboutus.component.html
@@ -13,8 +13,8 @@
   <div class="row row-content">
       <div class="col-sm-6">
           <h2>Our History</h2>
-          <p>Started in 2010, Ristorante con Fusion quickly established itself as a culinary icon par excellence in Hong Kong. With its unique brand of world fusion cuisine that can be found nowhere else, it enjoys patronage from the A-list clientele in Hong Kong.  Featuring four of the best three-star Michelin chefs in the world, you never know what will arrive on your plate the next time you visit us.</p>
-          <p>The restaurant traces its humble beginnings to <em>The Frying Pan</em>, a successful chain started by our CEO, Mr. Peter Pan, that featured for the first time the world's best cuisines in a pan.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod incididunt ut labore et dolore magna aliqua.<br>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur..</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod incididunt ut labore et dolore magna aliqua.<br>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
       </div>
       <div class="col-12 col-sm-6">
           <div class="card">
@@ -36,102 +36,17 @@
       <div class="col-12">
           <div class="card card-body bg-dark">
               <blockquote class="blockquote">
-                  <p class="mb-0" style="color: white;">You better cut the pizza in four pieces because
-                      I'm not hungry enough to eat six.</p>
+                  <p class="mb-0" style="color: white;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod incididunt ut labore et dolore magna aliqua.<br>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur..</p>
                   <footer class="blockquote-footer">Yogi Berra,
-                      <cite title="Source Title">The Wit and Wisdom of Yogi Berra,
-                      P. Pepe, Diversion Books, 2014</cite>
+                      <cite title="Source Title">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod incididunt ut labore et dolore magna aliqua.<br>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</cite>
                   </footer>
               </blockquote>
           </div>
       </div>
   </div>
 
+<app-carouselleaders></app-carouselleaders>
 
-  <div class="row" data-aos="fade-up">
-      <div class="col-12 text-center">
-          <h2>Corporate Leadership</h2>
-
-          <div class="container-fluid px-2 px-md-4 py-5 mx-auto">
-            <div class="card card0 border-0">
-                <div class="row d-flex">
-                    <div class="col-12">
-                        <div class="card1 pb-5">
-                            <div class="row px-3">
-                            </div>
-                            <div class="row px-3 justify-content-center mt-4 mb-5" >
-                                <div id="carouselleaders" class="carousel slide" data-ride="carousel">
-                                    <ol class="carousel-indicators">
-                                        <li data-target="#carouselleaders" data-slide-to="0" id="li1"></li>
-                                        <li data-target="#carouselleaders" data-slide-to="1" id="li2"></li>
-                                        <li data-target="#carouselleaders" data-slide-to="2" id="li3" class="active"></li>
-                                        <li data-target="#carouselleaders" data-slide-to="3" id="li4"></li>
-                                        <li data-target="#carouselleaders" data-slide-to="4" id="li5"></li>
-                                    </ol>
-                                    <div class="carousel-inner row w-100 mx-auto" role="listbox">
-                                        <div class="carousel-item col-12 col-md-5 offset-md-1 ">
-                                          <div class="card border-0 card-0 ">
-                                            <div class="text-center"> <img src="https://i.imgur.com/IjkibdE.jpg" class="img-fluid profile-pic"> </div>
-                                            <h6 class="font-weight-bold mt-5">John Paul</h6> <small class="mb-2">UI/UX Designer</small>
-                                            <hr width="50%">
-                                            <p class="content mt-2 mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod incididunt ut labore et dolore magna aliqua.<br>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                                        </div>
-                                      </div>
-                                        <div class="carousel-item col-12 col-md-5 offset-md-1">
-                                          <div class="card border-0 card-0">
-                                            <div class="text-center"> <img src="https://i.imgur.com/oW8Wpwi.jpg" class="img-fluid profile-pic"> </div>
-                                            <h6 class="font-weight-bold mt-5">Ximena Vegara</h6> <small class="mb-2">UI/UX Designer</small>
-                                            <hr width="50%">
-                                            <p class="content mt-2 mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod incididunt ut labore et dolore magna aliqua.<br>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                                        </div>
-                                      </div>
-
-                                        <div class="carousel-item active col-12 col-md-5 offset-md-1">
-                                          <div class="card border-0 card-0 ">
-
-                                            <div class="text-center"> <img src="https://i.imgur.com/EUYNvE1.jpg" class="img-fluid profile-pic"> </div>
-                                            <h6 class="font-weight-bold mt-5">Lena Maria</h6> <small class="mb-2">Backend Developer</small>
-                                            <hr width="50%">
-                                            <p class="content mt-2 mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod incididunt ut labore et dolore magna aliqua.<br>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                                        </div>
-                                      </div>
-
-                                        <div class="carousel-item col-12 col-md-5 offset-md-1">
-                                          <div class="card border-0 card-0 ">
-
-                                            <div class="text-center"> <img src="https://i.imgur.com/ndQx2Rg.jpg" class="img-fluid profile-pic"> </div>
-                                            <h6 class="font-weight-bold mt-5">Richard Finch</h6> <small class="mb-2">UI/UX Designer</small>
-                                            <hr width="50%">
-                                            <p class="content mt-2 mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod incididunt ut labore et dolore magna aliqua.<br>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                                        </div>
-                                      </div>
-
-                                        <div class="carousel-item col-12 col-md-5 offset-md-1">
-                                          <div class="card border-0 card-0 ">
-
-                                            <div class="text-center"> <img src="https://i.imgur.com/gazoShk.jpg" class="img-fluid profile-pic"> </div>
-                                            <h6 class="font-weight-bold mt-5">Marielle Haag</h6> <small class="mb-2">Backend Developer</small>
-                                            <hr width="50%">
-                                            <p class="content mt-2 mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod incididunt ut labore et dolore magna aliqua.<br>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                                        </div>
-                                      </div>
-
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row px-3 text-center justify-content-center mb-0 social"> <span class="fa fa-facebook-square mx-2"></span> <span class="fa fa-twitter mx-2"></span> <span class="fa fa-instagram mx-2"></span> <span class="fa fa-youtube-play mx-2"></span> </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-
-
-
-
-      </div>
- </div>
  <div class="row row-content ">
   <div class="col-12 col-sm-9 text-center ">
       <h2>Facts &amp; Figures</h2>
