--- a/fuchion/src/app/contactus/contactus.component.html
+++ b/fuchion/src/app/contactus/contactus.component.html
@@ -1,3 +1,127 @@
-<p>
-  contactus works!
-</p>
+<div class="container">
+  <div class="row">
+      <ol class="col-12 breadcrumb">
+          <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+          <li class="breadcrumb-item active">Contact Us</li>
+      </ol>
+      <div class="col-12">
+         <h3>Contact Us</h3>
+         <hr>
+      </div>
+  </div>
+
+  <div class="row row-content">
+     <div class="col-12">
+        <h3>Location Information</h3>
+     </div>
+      <div class="col-12 col-sm-4 offset-sm-1">
+             <h5>Our Address</h5>
+              <address style="font-size: 100%">
+            121, Clear Water Bay Road<br>
+            Clear Water Bay, Kowloon<br>
+            New York<br>
+            <i class="fa fa-phone"></i>: +852 1234 5678<br>
+            <i class="fa fa-fax"></i>: +852 8765 4321<br>
+            <i class="fa fa-envelope"></i>:
+                  <a href="mailto:lorem@food.net">lorem@food.net</a>
+         </address>
+      </div>
+      <div class="col-12 col-sm-6 offset-sm-1">
+          <h5>Map of our Location</h5>
+      </div>
+      <div class="col-12 col-sm-11 offset-sm-1">
+          <div class="btn-group" role="group">
+
+              <a role="button" class="btn btn-primary" href="tel:+852 1234 5678"><i class="fa fa-phone"></i> Call</a>
+              <a role="button" class="btn btn-info"><i class="fa fa-skype"></i> Skype</a>
+              <a role="button" class="btn btn-success" href="mailto:lorem@food.net"><i class="fa fa-envelope-o"></i> Mail</a>
+
+          </div>
+      </div>
+  </div>
+
+  <div class="row row-content ">
+     <div class="col-12 text-center ">
+        <h3>Send us your Feedback</h3>
+     </div>
+      <div class="col-12 col-md-9 text-center">
+          <form>
+              <div class="form-group row">
+                  <label for="firstname" class="col-md-2 col-form-label">First Name</label>
+                  <div class="col-md-9 offset-md-1">
+
+                      <input type="text" class="form-control" name="firstname" id="firstname"
+                          placeholder="First Name" >
+
+                  </div>
+              </div>
+              <div class="form-group row">
+                  <label for="lastname" class="col-md-2 col-form-label">Last Name</label>
+                  <div class="col-md-9 offset-md-1">
+
+                      <input type="text" class="form-control" name="lastname" id="lastname"
+                          placeholder="Last Name" >
+
+                  </div>
+              </div>
+              <div class="form-group row">
+                  <label for="tel" class="col-12 col-md-2 col-form-label">Contact Tel</label>
+                  <div class="col-5 col-md-3 offset-md-1">
+
+                      <input type="text" class="form-control" name="area" id="area"
+                          placeholder="Area Code" >
+
+                  </div>
+                  <div class="col-7 col-md-6 ">
+
+                      <input type="text" class="form-control" name="tel" id="tel"
+                          placeholder="Tel.Number" >
+
+                  </div>
+              </div>
+              <div class="form-group row">
+                  <label for="emailid" class="col-md-2 col-form-label">Email</label>
+                  <div class="col-md-9 offset-md-1">
+
+                      <input type="email" class="form-control" name="emailid" id="emailid"
+                          placeholder="Email" >
+
+                  </div>
+              </div>
+              <div class="form-group row">
+                  <div class="col-md-5 offset-md-3">
+                      <div class="form-check">
+                          <input type="checkbox" class="form-check-input" name="approve" id="approve" value="">
+                          <label class="form-check-label" for="approve">
+                              <strong>May we contact you?</strong>
+                          </label>
+                      </div>
+                  </div>
+                  <div class="col-md-3 offset-md-1">
+                      <select class="form-control">
+                          <option>Tel.</option>
+                          <option>Email</option>
+                      </select>
+                  </div>
+              </div>
+              <div class="form-group row">
+                  <label for="feedback" class="col-md-2 col-form-label">Your Feedback</label>
+                  <div class="col-md-9 offset-md-1">
+                      <textarea class="form-control" id="feedback" name="feedback" rows="12"></textarea>
+                  </div>
+              </div>
+              <div class="form-group row">
+
+                  <div class="col-md-9 offset-md-3 text-center">
+                      <button type="submit" class="btn btn-primary ml-auto">Send Feedback</button>
+                  </div>
+
+              </div>
+
+          </form>
+      </div>
+       <div class="col-12 col-md">
+      </div>
+ </div>
+
+</div>
