--- a/fuchion/src/app/menu/menu.component.html
+++ b/fuchion/src/app/menu/menu.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row row-content">
     <div class="col-12">
-      <ul class="nav nav-tabs" role="tablist">
+        <ul class="nav nav-tabs nav-justified" role="tablist">
         <li class=" nav-item"><a class="nav-link active" data-toggle="tab" href="#special" role="tab">Special</a></li>
         <li class=" nav-item" ><a class="nav-link" data-toggle="tab" href="#secondary" role="tab">Secondary</a></li>
         <li class=" nav-item"><a class="nav-link" data-toggle="tab" href="#desserts" role="tab">Desserts</a></li>
