--- a/fuchion/src/app/menu/menu.component.html
+++ b/fuchion/src/app/menu/menu.component.html
@@ -2,36 +2,18 @@
   <div class="row row-content">
     <div class="col-12">
         <ul class="nav nav-tabs nav-justified" role="tablist">
-        <li class=" nav-item" ><a class="nav-link" data-toggle="tab" [routerLink]="['/menu']" [queryParams]="{category : 'special'}"  routerLinkActive="active" role="tab">Special</a></li>
-        <li class=" nav-item" ><a class="nav-link" data-toggle="tab" [routerLink]="['/menu']" [queryParams]="{category : 'secondary'}" routerLinkActive="active" role="tab">Secondary</a></li>
-        <li class=" nav-item"><a class="nav-link" data-toggle="tab" [routerLink]="['/menu']" [queryParams]="{category : 'desserts'}"  routerLinkActive="active" role="tab">Desserts</a></li>
-        <li class=" nav-item"><a class="nav-link" data-toggle="tab" [routerLink]="['/menu']" [queryParams]="{category : 'soda'}"  routerLinkActive="active" role="tab">Soda</a></li>
+        <li class=" nav-item" ><a class="nav-link" data-toggle="tab" [routerLink]="['/menu']" [queryParams]="{category : 'special'}"  fragment="special" routerLinkActive="active" role="tab">Special</a></li>
+        <li class=" nav-item" ><a class="nav-link" data-toggle="tab" [routerLink]="['/menu']" [queryParams]="{category : 'secondary'}" fragment="secondary" routerLinkActive="active" role="tab">Secondary</a></li>
+        <li class=" nav-item"><a class="nav-link" data-toggle="tab" [routerLink]="['/menu']" [queryParams]="{category : 'desserts'}"  fragment="desserts"  routerLinkActive="active" role="tab">Desserts</a></li>
+        <li class=" nav-item"><a class="nav-link" data-toggle="tab" [routerLink]="['/menu']" [queryParams]="{category : 'soda'}" fragment="soda" routerLinkActive="active" role="tab">Soda</a></li>
       </ul>
     </div>
     <div class="col-12">
       <div class="tab-content row-contents">
-        <div id="special" class="tab-pane fade show active" role="tabpanel">
-          <h3>Special</h3>
+        <div id="{{category}}" class="tab-pane fade show active" role="tabpanel">
+          <h3>{{category | uppercase}}</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           <app-menuitems></app-menuitems>
-      </div>
-      <div id="secondary" class="tab-pane fade" role="tabpanel">
-        <h3>Secondary</h3>
-        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <app-menuitems></app-menuitems>
-
-      </div>
-      <div id="desserts" class="tab-pane fade" role="tabpanel">
-        <h3>Desserts</h3>
-        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
-        <app-menuitems></app-menuitems>
-
-      </div>
-      <div id="soda" class="tab-pane fade" role="tabpanel">
-        <h3>Soda</h3>
-        <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-        <app-menuitems></app-menuitems>
-
       </div>
     </div>
   </div>
