--- a/fuchion/src/app/menuitems/menuitems.component.html
+++ b/fuchion/src/app/menuitems/menuitems.component.html
@@ -1,15 +1,17 @@
-<div class="card-group ">
+<div class="container pa0 flex justify-center">
 
-  <div class="flip-card" data-aos="fade-up">
+<div class="listings card-columns">
+ <!--
+  <div class="flip-card "  *ngFor="let food of foods">
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <div class="card" data-aos="fade-up">
+        <div class="card" >
 
-    <img class="card-img-top" data-aos="fade-right" src="assets/img/Brochettes.jpg" alt="Card image cap">
+    <img class="card-img-top" data-aos="fade-right" src="{{food.mainImage}}" alt="{{food.name}}">
 
     <div class="card-body text-center align-self-center">
-      <h5 class="card-title">Dish</h5>
-      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <h5 class="card-title">{{food.name}}}}</h5>
+      <p class="card-text">{{food.description}}</p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
 
     </div>
@@ -19,10 +21,10 @@
     <div class="card bg-secondary">
       <div class="card-img-top text-center">
         <h1 class="card-title">PRICE</h1>
-        <p class="card-text">$4.99</p>
+        <p class="card-text">{{food.price}}</p>
       </div>
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">{{food.name}}</h5>
         <a role="button" class="btn btn-primary btn-lg"><i class="fa fa-external-link" aria-hidden="true"></i> More Details</a>
 
         <div class="btn-group">
@@ -40,23 +42,18 @@
 
 
   </div>
+-->
 
-  <div class="card" data-aos="fade-up">
-    <img class="card-img-top" src="assets/img/pates.jpg" data-aos="fade-right"  alt="Card image cap">
+
+  <div class="card "  *ngFor="let food of foods">
+    <img class="card-img-top" src="{{food.mainImage}}" alt="{{food.name}}">
     <div class="card-body text-center align-self-center">
-      <h5 class="card-title">Dish</h5>
-      <p class="card-text text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <h5 class="card-title">{{food.name}}</h5>
+      <p class="card-text">{{food.description}}</p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
     </div>
   </div>
-  <div class="card" data-aos="fade-up">
-    <img class="card-img-top" src="assets/img/special-buffet.jpeg" data-aos="fade-right"  alt="Card image cap">
-    <div class="card-body text-center align-self-center">
-      <h5 class="card-title">Dish</h5>
-      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-    </div>
-  </div>
+</div>
 </div>
 
 
