--- a/fuchion/src/app/fooddetail/fooddetail.component.html
+++ b/fuchion/src/app/fooddetail/fooddetail.component.html
@@ -8,7 +8,7 @@
       <div class="card card0 border-0">
           <div class="row d-flex">
               <div class="col-12">
-                  <div class="card1 pb-5" *ngIf="food">
+                  <div class="card1 pb-5" *ngIf="food && !errMess">
                       <div class="row px-3">
                       </div>
                       <div class="row px-3 justify-content-center mt-4 mb-5 row-contents" >
@@ -30,24 +30,31 @@
       </ol>
     </div>
     </div>
+    <div class="card1 pb-5 row-contents" *ngIf="errMess">
+      <div class="row px-3">
+      </div>
+      <div class="text-center" *ngIf="errMess">
+        <h3>ERROR</h3>
+        <p>{{errMess}}</p>
+      </div>
+    </div>
 
+    <div class="card1 pb-5 row-contents" *ngIf="food===null && !errMess">
+      <div class="row px-3">
+      </div>
+      <div class="row text-center flex justify-center" *ngIf="food === null && !errMess">
+      <div class="uploader-status text-center loading-indicator tp-section">
+        <h4>Loading .... Please wait !</h4>
+        <div class="text-center">
+          <mat-spinner  class="tp-margin" [value]=50 mode="indeterminate" ></mat-spinner>
+        </div>
+      </div>
+
+      </div>
+      </div>
   </div>
 </div>
-<div class="card1 pb-5" *ngIf="food===null">
 
-<div class="row text-center flex justify-center" *ngIf="food === null && !errMess">
-  <div class="col-12 text-center justify-center" >
-
-<div class="uploader-status text-center loading-indicator tp-section">
-  <h4>Loading .... Please wait !</h4>
-  <div class="text-center">
-    <mat-spinner  class="tp-margin" [value]=50 mode="indeterminate" ></mat-spinner>
-  </div>
-</div>
-</div>
-
-</div>
-</div>
 
 </div>
 
@@ -58,6 +65,8 @@
 <div class="container-fluid">
   <div class="be-comment-block">
     <h1 class="comments-title" *ngIf="comments">Comments ({{comments.length}})</h1>
+    <h1 class="comments-title" *ngIf="!comments">Comments (0)</h1>
+
     <div class="be-comment" *ngFor="let comment of comments" data-aos="fade-up">
       <div class="be-img-comment">
         <a href="blog-detail-2.html">
@@ -98,6 +107,26 @@
         <p class="be-comment-text">
          {{this.commentForm.get('comment').value}}
         </p>
+      </div>
+    </div>
+    <div class="row text-center flex justify-center row-contents" *ngIf="comments===null && !errMess">
+      <div class="col-12 text-center justify-center" >
+
+    <div class="uploader-status text-center loading-indicator tp-section">
+      <h4>Loading .... Please wait !</h4>
+      <div class="text-center">
+        <mat-spinner  class="tp-margin" [value]=50 mode="indeterminate" ></mat-spinner>
+      </div>
+    </div>
+    </div>
+
+    </div>
+    <div class="card1 pb-5 row-contents" *ngIf="errMess">
+      <div class="row px-3">
+      </div>
+      <div class="text-center" *ngIf="errMess">
+        <h3>ERROR</h3>
+        <p>{{errMess}}</p>
       </div>
     </div>
     <div class="be-comment">
